# minmea

./: CMakeLists.txt  minmea.c
